# Haskell-wordcount

./: .gitignore  README.md  counter.c  counter.h  counterlib.c  ctwc.hs  hwc.cabal  mtwc.hs  stack.yaml  trie.hs  trietest.hs  twc.hs  wc.hs  wp.txt
app/: c_wc.hs  hawc.hs  hwc.hs  trie_wc.hs
c/: counter.c  counterlib.c  counterlib.h  wc.hs
cbits/: libCounterlib.c
hashtable/: wc.hs
mutabletrie/: mtrie.hs  wc.hs
shellscript/: wc
simple/: wc.hs
src/: MBag.hs  ccounterlib.hs  counter.c  counter.h  counterlib.c  counterlib.h  mtrie.hs  trie.hs  ttrie.hs  wordcounters.hs
src/wordcounters/: ascii.hs
