name:                hwc
version:             0.2.0.0
synopsis:            Testing different word counting algorithms in Haskell
description:         Please see README.md
homepage:            https://github.com/JBons/Haskell-wordcount#readme
license:             GPL-3
license-file:        LICENSE
author:              Juhani Bonsdorff
maintainer:          Juhani.Bonsdorff@gmail.com
copyright:           2015-2016 Juhani Bonsdorff
category:            Example
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Trie, MTrie
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
  default-language:    Haskell2010

executable hwc-exe
  hs-source-dirs:      app
  main-is:             mtrie_wc.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hwc
                     , containers
                     , array
                     , timeit
  default-language:    Haskell2010

test-suite hwc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hwc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JBons/Haskell-wordcount 
