name:                hwc
version:             0.3.6.2
synopsis:            Testing different word counting algorithms in Haskell
description:         Please see README.md
homepage:            https://github.com/JBons/Haskell-wordcount#readme
license:             GPL-3
license-file:        LICENSE
author:              Juhani Bonsdorff
maintainer:          Juhani.Bonsdorff@gmail.com
copyright:           2015-2017 Juhani Bonsdorff
category:            Example
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
Extra-source-files:


library
  hs-source-dirs:      src
  exposed-modules:     TTrie
                     , Trie
                     , MTrie
                     , CCounterLib
                     , WordCounters
                     , WordCounters.ASCII
                     , MBag
  ghc-options:         -O2 
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
                     , hashtables
                     , EdisonAPI
                     , EdisonCore
                     , bytestring
                     , vector
                     , hashable
                     , text
  default-language:    Haskell2010
  C-sources:           cbits/libCounterlib.c
  Include-dirs:        include
  Includes:            libCounterlib.h
  Install-includes:    libCounterlib.h
  cc-options:          "-O3"

executable hwc
  hs-source-dirs:      app
  main-is:             hwc.hs
  ghc-options:         -O2 -rtsopts -fllvm -pgmlo opt -pgmlc llc
  build-depends:       base
                     , containers
                     , text
                     , hwc
                     , timeit
  default-language:    Haskell2010

executable hawc
  hs-source-dirs:      app
  main-is:             hawc.hs
  ghc-options:         -O2 -rtsopts
  build-depends:       base
                     , containers
                     , bytestring
                     , hwc
                     , timeit
  default-language:    Haskell2010

test-suite hwc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hwc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JBons/Haskell-wordcount
